--- a/19.09.2017/sass/_header.scss
+++ b/19.09.2017/sass/_header.scss
@@ -2,53 +2,24 @@
     background-color: #ffffff !important;
     height: 100px;
     i {
-        position: absolute;
-        content: '\f0eb';
-        color: #ffffff;
-        font-size: 35px;
-        line-height: 60px;
-        font-family: 'FontAwesome';
-        width: 65px;
-        height: 65px;
-        background: #8dbf41;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        border-radius: 50%;
-        text-align: center;
-        top: 13px;
-        left: 34px;
+    content: '\f0eb';
+    color: #ffffff;
+    font-size: 35px;
+    line-height: 60px;
+    width: 8%;
+    height: 80%;
+    background: #8dbf41;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    text-align: center;
     }
     .navbar-a {
-        position: absolute;
-        left: 10%;
+        left: 12%;
         color: black;
         font-size: 35px;
-        line-height: 1;
         font-family: 'Raleway', sans-serif;
         font-weight: 600;
-    }
-    .nav-item {
-        .dropdown {
-            position: relative;
-            &:hover {
-                .dropdown-menu {
-                    display: block;
-                }
-            }
-            .dropdown-menu {
-                position: absolute;
-                top: 100%;
-                left: -35px;
-                z-index: 1000;
-                display: none;
-                float: left;
-                margin: 14px 0 0;
-                list-style: none;
-                font-size: 13px;
-                text-align: left;
-                background-color: #8dbf41;
-            }
-        }
     }
     .navbar-nav {
         right: 5%;
@@ -60,6 +31,8 @@
                 color: black;
                 transition: 0.5s ease;
             }
+            
         }
     }
 }
+
