--- a/19.09.2017/css/index.css
+++ b/19.09.2017/css/index.css
@@ -2,45 +2,23 @@
   background-color: #ffffff !important;
   height: 100px; }
   .navbar i {
-    position: absolute;
     content: '\f0eb';
     color: #ffffff;
     font-size: 35px;
     line-height: 60px;
-    font-family: 'FontAwesome';
-    width: 65px;
-    height: 65px;
+    width: 8%;
+    height: 80%;
     background: #8dbf41;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    text-align: center;
-    top: 13px;
-    left: 34px; }
+    text-align: center; }
   .navbar .navbar-a {
-    position: absolute;
-    left: 10%;
+    left: 12%;
     color: black;
     font-size: 35px;
-    line-height: 1;
     font-family: 'Raleway', sans-serif;
     font-weight: 600; }
-  .navbar .nav-item .dropdown {
-    position: relative; }
-    .navbar .nav-item .dropdown:hover .dropdown-menu {
-      display: block; }
-    .navbar .nav-item .dropdown .dropdown-menu {
-      position: absolute;
-      top: 100%;
-      left: -35px;
-      z-index: 1000;
-      display: none;
-      float: left;
-      margin: 14px 0 0;
-      list-style: none;
-      font-size: 13px;
-      text-align: left;
-      background-color: #8dbf41; }
   .navbar .navbar-nav {
     right: 5%;
     position: absolute; }
@@ -50,6 +28,56 @@
       .navbar .navbar-nav a:hover {
         color: black;
         transition: 0.5s ease; }
+
+.photo .overlayPhoto {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.35);
+  z-index: 3; }
+.photo .slideContent {
+  position: absolute;
+  top: 33%;
+  color: white;
+  text-align: center;
+  width: 70%;
+  left: 15%;
+  z-index: 35; }
+  .photo .slideContent .btn {
+    margin-top: 25px;
+    color: black;
+    display: inline-block;
+    font-weight: 400;
+    cursor: pointer;
+    border: 2px solid white;
+    background: white;
+    outline: none;
+    -moz-transition: 0.2s all ease;
+    -webkit-transition: 0.2s all ease;
+    -o-transition: 0.2s all ease;
+    transition: 0.2s all ease;
+    padding: 22px 24px;
+    font-size: 20px;
+    line-height: 1;
+    text-align: center; }
+    .photo .slideContent .btn:hover {
+      color: #8dbf41;
+      background-color: transparent;
+      border: 2px solid #8dbf41; }
+.photo .carousel-control-prev {
+  z-index: 10; }
+.photo .carousel-control-next {
+  z-index: 10; }
+.photo .fa-angle-double-left {
+  position: absolute;
+  font-size: 40px;
+  top: 80%;
+  left: 50%; }
+.photo .fa-angle-double-right {
+  position: absolute;
+  font-size: 40px;
+  top: 80%;
+  right: 50%; }
 
 * {
   font-family: 'Raleway', sans-serif; }
