--- a/19.09.2017/css/style.css
+++ b/19.09.2017/css/style.css
@@ -1,4 +1,33 @@
 .showClass {
-  display: block;
-  transition: 10s ease;
+display: block;
+  transition: 1s ease;
+}
+.backtotop{
+  font-size: 30px;
+  line-height: 50px;
+  width: 50px;
+  height: 50px;
+  background: #719934;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -moz-transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  -moz-box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.4);
+  -webkit-box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.4);
+  box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.4);
+  color: #fff;
+  position: fixed;
+  overflow: hidden;
+  text-align: center;
+  text-decoration: none;
+  z-index: 99999;
+}
+
+.header{
+  width: 550px;
+  background: #03A9F4;
+  color: white;
 }
