--- a/19.09.2017/sass/_header.scss
+++ b/19.09.2017/sass/_header.scss
@@ -6,7 +6,7 @@
     color: #ffffff;
     font-size: 35px;
     line-height: 60px;
-    width: 8%;
+    width: 60px;
     height: 80%;
     background: #8dbf41;
     -webkit-border-radius: 50%;
