--- a/19.09.2017/sass/_sc3.scss
+++ b/19.09.2017/sass/_sc3.scss
@@ -10,6 +10,9 @@
     .col-md-4 {
         color: white;
         .icon {
+            i {
+                float: left;
+            }
             font-size: 40px;
             color: #8dbf41;
             display: inline-block;
